tmp/echo2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo2
spec:
  selector:
    matchLabels:
      app: echo2
  replicas: 2
  template:
    metadata:
      labels:
        app: echo2
    spec:
      containers:
      - name: echo1
        image: hashicorp/http-echo
        args:
        - "-text=echoNumberTwo"
        ports:
        - containerPort: 5678
